Refactor code style